--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
   text-align: center;
   gap: 1rem;
   padding: 1rem;
-  height: 32rem;
+  min-height: 60vh;
+  max-height: 32rem;
   max-width: 24rem;
   border-radius: 14px;
   position: absolute;
@@ -26,6 +27,13 @@ body {
   box-shadow: 
     inset 2px 2px 5px 2px rgb(200,200,200,.2),
     inset -2px -2px 5px 2px rgb(2,2,2,.2);
+}
+
+@media screen and (width < 1024px) {
+  body {
+    width: 95%;
+    height: 90%;
+  }
 }
 
 input, button {
