--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: Roboto-Bold;
+  src: url(./fonts/Roboto-Bold.ttf);
+}
+@font-face {
+  font-family: Roboto-Regular;
+  src: url(./fonts/Roboto-Regular.ttf);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -9,6 +18,7 @@ html {
 }
 
 body {
+  font-family: "Roboto-Regular", sans-serif;
   background-color: slateblue;
   color: whitesmoke;
   display: grid;
@@ -36,6 +46,11 @@ body {
   }
 }
 
+h1 {
+  text-shadow: 1px 1px 5px rgb(2,2,2,.2);
+  font-family: "Roboto-Bold", sans-serif;
+}
+
 input, button {
   font: inherit;
   line-height: 1.5;
@@ -43,7 +58,7 @@ input, button {
   border-radius: 4px;
   border: none;
   transition: all .1s;
-  color: #333;
+  color: slateblue;
 }
 
 input {
@@ -69,4 +84,7 @@ p {
   justify-self: center;
   padding: 1rem;
   font-size: 1.5rem;
+  min-height: 4rem;
+  background-color: whitesmoke;
+  color: slateblue
 }
